# 231nFinalProject

./: .gitignore  .gitmodules  Pipfile  README.md  activation_data.py  alexnet.ipynb  alexnet.py  all-of-imagenet.ipynb  all_of_imagenet.py  biggan.py  clipv.py  data_visualization.ipynb  dataset_eg_acts.csv  datset_ex_scrape.py  environment.yml  featurevis-script-analysis.ipynb  featurevis-script.py  featurevis.ipynb  fid.sh  imagecrop.py  imagenet-activation-analysis.ipynb  imagenet-all.py  imagenet_stats.py  inceptionv1.py  mf_realization_script.ipynb  move-outputs.py  multifaceted_realization.py  outputs  prior_optimization.py  pyproject.toml  realization-hparam-tuning.ipynb  realization-presentation.ipynb  realization-script.ipynb  realization-script.py  realization-test.ipynb  realization.ipynb  resnet.py
cifar10_dcgan/: cifar10-finetuning.ipynb  dcgan_cifar10_pretrained_load.ipynb
discriminators/: .gitignore  run.sh
