[tool.poetry]
name = "cs231n-final"
version = "0.1.0"
description = ""
authors = ["Kevin Liu <kevin@kliu.io>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
ipykernel = "^5.5.5"
autopep8 = "^1.5.7"
sklearn = "^0.0"
tqdm = "^4.61.0"
requests = "^2.25.1"
pytorch-pretrained-biggan = "^0.1.1"
h5py = "^3.2.1"
ipywidgets = "^7.6.3"
jupyter = "^1.0.0"
ray = "^1.3.0"
nltk = "^3.6.2"
captum = { path = "./captum", develop = true }
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
